# go-playground

./: BUILD.bazel  WORKSPACE  go.mod  main.go
cmd/: BUILD.bazel  root.go  s3.go
